--- a/frontend/src/app/components/chat/chat.component.scss
+++ b/frontend/src/app/components/chat/chat.component.scss
@@ -1,3 +1,42 @@
-.c-chat {
-  margin-left: 16px;
+:host {
+  .c-chat {
+    margin-left: 16px;
+    max-height: 420px;
+    overflow-y: auto;
+  }
+  .typing {
+    height: 24px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .typing__dot {
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    margin: 0 2px;
+    animation: typing 1.2s infinite;
+  }
+
+  .typing__dot:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  .typing__dot:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+
+  @keyframes typing {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-8px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 }
